--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,75 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+ul li {
+  list-style: none;
+  display: inline;
+  padding: 20px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+span {
+  /* opacity: 0.6; */
+  color: #1c689c;
+}
+
+body {
+  background-color: #040404;
+}
+
+.watchListHeading {
+  background: linear-gradient(
+    1deg,
+    rgba(255, 215, 0, 1) 0%,
+    rgba(255, 230, 45, 1) 31%,
+    rgba(255, 183, 53, 1) 54%
+  );
+}
+
+::-webkit-scrollbar {
+  /* background-color: #1C689C; */
+  background-color: #222;
+  width: 20px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #740116;
+  border: 2px solid rgba(255, 255, 255, 0.299);
+}
+
+.icon {
+  display: none;
+}
+
+@media screen and (max-width: 800px) {
+  .navLinks {
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    z-index: 88;
+    top: 60px;
+    right: -300px;
+    width: 180px;
+    height: 40vh;
+    background-color: #222;
+    transition: 0.6s ease;
+  }
+  .icon {
+    display: block;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navLinks {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.activeMenu {
+  right: 0px;
 }
